# chatbat

./: Cargo.toml  flake.nix
src/: main.rs  schema.json  shared.rs  task_planner.rs  website_maker.rs
src/output/: 1.html
