[package]
name = "ollama"
version = "0.1.0"
edition = "2024"

[dependencies]
distance = "0.4.0"
serde = { version = "*", features = ['derive'] }
serde_json = "*"
schemars = "0.8.22"
reqwest = { version = "*", features = ['json'] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "*"
futures = "*"
